jitfailure-dolfin_expression_5dcd29537c565c0b7d21008e5970f8f8/error.log
/tmp/tmp8ka_tjmg/dolfin_expression_5dcd29537c565c0b7d21008e5970f8f8.cpp: In member function ‘virtual void dolfin::dolfin_expression_5dcd29537c565c0b7d21008e5970f8f8::eval(Eigen::Ref<Eigen::Matrix<double, -1, 1> >, Eigen::Ref<const Eigen::Matrix<double, -1, 1> >) const’:
/tmp/tmp8ka_tjmg/dolfin_expression_5dcd29537c565c0b7d21008e5970f8f8.cpp:66:50: error: ‘math’ was not declared in this scope
           values[0] = rhoMax-((rhoMax-rhoMin)/(1+math.exp(Inclination*(-t+t0)))+rhoMin)+rhoMin;
                                                  ^~~~
/tmp/tmp8ka_tjmg/dolfin_expression_5dcd29537c565c0b7d21008e5970f8f8.cpp:66:50: note: suggested alternative:
In file included from /usr/include/boost/variant/variant.hpp:43:0,
                 from /usr/include/boost/variant.hpp:17,
                 from /usr/include/dolfin/parameter/Parameters.h:25,
                 from /usr/include/dolfin/common/Variable.h:28,
                 from /usr/include/dolfin/function/GenericFunction.h:30,
                 from /usr/include/dolfin/function/Expression.h:28,
                 from /tmp/tmp8ka_tjmg/dolfin_expression_5dcd29537c565c0b7d21008e5970f8f8.cpp:13:
/usr/include/boost/math/common_factor_ct.hpp:17:11: note:   ‘boost::math’
 namespace math
           ^~~~
/tmp/tmp8ka_tjmg/dolfin_expression_5dcd29537c565c0b7d21008e5970f8f8.cpp: In member function ‘virtual double dolfin::dolfin_expression_5dcd29537c565c0b7d21008e5970f8f8::get_property(std::__cxx11::string) const’:
/tmp/tmp8ka_tjmg/dolfin_expression_5dcd29537c565c0b7d21008e5970f8f8.cpp:78:11: warning: this ‘if’ clause does not guard... [-Wmisleading-indentation]
           if (name == "rhoMax") return rhoMax;          if (name == "rhoMin") return rhoMin;          if (name == "Inclination") return Inclination;          if (name == "t") return t;          if (name == "t0") return t0;
           ^~
/tmp/tmp8ka_tjmg/dolfin_expression_5dcd29537c565c0b7d21008e5970f8f8.cpp:78:57: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘if’
           if (name == "rhoMax") return rhoMax;          if (name == "rhoMin") return rhoMin;          if (name == "Inclination") return Inclination;          if (name == "t") return t;          if (name == "t0") return t0;
                                                         ^~
